test/conformance/chainsaw/generate/validation/clusterpolicy/orphan/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-update-orphan
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
